// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMcpAppRoute > snapshot — no auth, no state 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js'
import { WebStandardStreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/webStandardStreamableHttp.js'
import { randomUUID } from 'crypto'
import { readFileSync } from 'fs'
import { join } from 'path'
import { z } from 'zod'

// fs and crypto require Node.js runtime
export const runtime = 'nodejs'

const RESOURCE_URI = 'ui://my-app'
// Standard MIME type for MCP App HTML resources — hosts use this to identify interactive UIs
const RESOURCE_MIME_TYPE = 'text/html;profile=mcp-app'

const corsHeaders = {
  'Access-Control-Allow-Origin': '*',
  'Access-Control-Allow-Methods': 'GET, POST, DELETE, OPTIONS',
  'Access-Control-Allow-Headers': 'Content-Type, mcp-session-id, mcp-protocol-version',
  'Access-Control-Expose-Headers': 'mcp-session-id',
}

function withCors(response: Response): Response {
  const newResponse = new Response(response.body, response)
  Object.entries(corsHeaders).forEach(([key, value]) => {
    newResponse.headers.set(key, value)
  })
  return newResponse
}

// Session store — persists across requests within the Node.js process lifetime
const sessions = new Map<string, WebStandardStreamableHTTPServerTransport>()

function createServer() {
  const server = new McpServer({ name: 'MyApp', version: '1.0.0' })

  // Resource: the interactive HTML UI bundle.
  // mimeType must be 'text/html;profile=mcp-app' so hosts identify this as an MCP App.
  server.resource(RESOURCE_URI, RESOURCE_URI, { mimeType: RESOURCE_MIME_TYPE }, async () => ({
    contents: [{
      uri: RESOURCE_URI,
      mimeType: RESOURCE_MIME_TYPE,
      text: readFileSync(join(process.cwd(), 'public/mcp-apps/my-app/index.html'), 'utf-8'),
    }],
  }))

  // Tool: _meta.ui.resourceUri in the tool DEFINITION (not the result) tells hosts to render the UI.
  server.registerTool(
    'my_app_tool',
    {
      description: 'Describe what this tool does',
      inputSchema: { input: z.string().describe('The input for this tool') },
      _meta: {
        ui: { resourceUri: RESOURCE_URI },
        'ui/resourceUri': RESOURCE_URI, // legacy compat for older hosts
      },
    },
    async ({ input }) => {
      // TODO: add your own state
      return {
        content: [{ type: 'text' as const, text: \`Result for: \${input}\` }],
      }
    }
  )

  return server
}

// Helper — create a new transport+server pair, store session, return the response
async function handleNewSession(req: Request): Promise<Response> {
  const transport = new WebStandardStreamableHTTPServerTransport({
    sessionIdGenerator: () => randomUUID(),
  })
  const server = createServer()
  await server.connect(transport)
  const response = await transport.handleRequest(req)
  if (transport.sessionId) {
    sessions.set(transport.sessionId, transport)
    transport.onclose = () => sessions.delete(transport.sessionId!)
  }
  return response
}

// OPTIONS — handle CORS preflight
export async function OPTIONS() {
  return new Response(null, { status: 204, headers: corsHeaders })
}

// GET — SSE stream for existing session (server-to-client notifications)
export async function GET(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })
  const sessionId = req.headers.get('mcp-session-id')
  if (sessionId) {
    const transport = sessions.get(sessionId)
    if (!transport) return withCors(new Response('Session not found', { status: 404 }))
    return withCors(await transport.handleRequest(req))
  }
  return withCors(await handleNewSession(req))
}

// POST — initialize (no session ID) or route to existing session
export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })
  const sessionId = req.headers.get('mcp-session-id')
  if (!sessionId) return withCors(await handleNewSession(req))
  const transport = sessions.get(sessionId)
  if (!transport) return withCors(new Response('Session not found', { status: 404 }))
  return withCors(await transport.handleRequest(req))
}

// DELETE — terminate session and release resources
export async function DELETE(req: Request) {
  const sessionId = req.headers.get('mcp-session-id')
  if (sessionId) {
    await sessions.get(sessionId)?.close()
    sessions.delete(sessionId)
  }
  return withCors(new Response(null, { status: 204 }))
}
"
`;

exports[`generateMcpAppRoute > snapshot — with auth and state 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js'
import { WebStandardStreamableHTTPServerTransport } from '@modelcontextprotocol/sdk/server/webStandardStreamableHttp.js'
import { randomUUID } from 'crypto'
import { readFileSync } from 'fs'
import { join } from 'path'
import { z } from 'zod'
import { getState, setState } from '@/lib/mcp-my-app-state'
import { auth } from '@/auth'

// fs and crypto require Node.js runtime
export const runtime = 'nodejs'

const RESOURCE_URI = 'ui://my-app'
// Standard MIME type for MCP App HTML resources — hosts use this to identify interactive UIs
const RESOURCE_MIME_TYPE = 'text/html;profile=mcp-app'

const corsHeaders = {
  'Access-Control-Allow-Origin': '*',
  'Access-Control-Allow-Methods': 'GET, POST, DELETE, OPTIONS',
  'Access-Control-Allow-Headers': 'Content-Type, mcp-session-id, mcp-protocol-version',
  'Access-Control-Expose-Headers': 'mcp-session-id',
}

function withCors(response: Response): Response {
  const newResponse = new Response(response.body, response)
  Object.entries(corsHeaders).forEach(([key, value]) => {
    newResponse.headers.set(key, value)
  })
  return newResponse
}

// Session store — persists across requests within the Node.js process lifetime
const sessions = new Map<string, WebStandardStreamableHTTPServerTransport>()

function createServer() {
  const server = new McpServer({ name: 'MyApp', version: '1.0.0' })

  // Resource: the interactive HTML UI bundle.
  // mimeType must be 'text/html;profile=mcp-app' so hosts identify this as an MCP App.
  server.resource(RESOURCE_URI, RESOURCE_URI, { mimeType: RESOURCE_MIME_TYPE }, async () => ({
    contents: [{
      uri: RESOURCE_URI,
      mimeType: RESOURCE_MIME_TYPE,
      text: readFileSync(join(process.cwd(), 'public/mcp-apps/my-app/index.html'), 'utf-8'),
    }],
  }))

  // Tool: _meta.ui.resourceUri in the tool DEFINITION (not the result) tells hosts to render the UI.
  server.registerTool(
    'my_app_tool',
    {
      description: 'Describe what this tool does',
      inputSchema: { input: z.string().describe('The input for this tool') },
      _meta: {
        ui: { resourceUri: RESOURCE_URI },
        'ui/resourceUri': RESOURCE_URI, // legacy compat for older hosts
      },
    },
    async ({ input }) => {
      const previous = getState<string>('last-input')
      setState('last-input', input)
      return {
        content: [{ type: 'text' as const, text: \`Result for: \${input}\` }],
      }
    }
  )

  return server
}

// Helper — create a new transport+server pair, store session, return the response
async function handleNewSession(req: Request): Promise<Response> {
  const transport = new WebStandardStreamableHTTPServerTransport({
    sessionIdGenerator: () => randomUUID(),
  })
  const server = createServer()
  await server.connect(transport)
  const response = await transport.handleRequest(req)
  if (transport.sessionId) {
    sessions.set(transport.sessionId, transport)
    transport.onclose = () => sessions.delete(transport.sessionId!)
  }
  return response
}

// OPTIONS — handle CORS preflight
export async function OPTIONS() {
  return new Response(null, { status: 204, headers: corsHeaders })
}

// GET — SSE stream for existing session (server-to-client notifications)
export async function GET(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })
  const sessionId = req.headers.get('mcp-session-id')
  if (sessionId) {
    const transport = sessions.get(sessionId)
    if (!transport) return withCors(new Response('Session not found', { status: 404 }))
    return withCors(await transport.handleRequest(req))
  }
  return withCors(await handleNewSession(req))
}

// POST — initialize (no session ID) or route to existing session
export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })
  const sessionId = req.headers.get('mcp-session-id')
  if (!sessionId) return withCors(await handleNewSession(req))
  const transport = sessions.get(sessionId)
  if (!transport) return withCors(new Response('Session not found', { status: 404 }))
  return withCors(await transport.handleRequest(req))
}

// DELETE — terminate session and release resources
export async function DELETE(req: Request) {
  const sessionId = req.headers.get('mcp-session-id')
  if (sessionId) {
    await sessions.get(sessionId)?.close()
    sessions.delete(sessionId)
  }
  return withCors(new Response(null, { status: 204 }))
}
"
`;

exports[`generateMcpAppState > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

const store = new Map<string, unknown>()

export function getState<T>(key: string): T | undefined {
  return store.get(key) as T | undefined
}

export function setState<T>(key: string, value: T): void {
  store.set(key, value)
}
"
`;

exports[`generateMcpAppUiBundle > snapshot — default my-app 1`] = `
"<!-- Generated by ai-wingman — edit freely, you own this file. -->
<!-- NOTE: swap to Vite + vite-plugin-singlefile for React/TypeScript authoring -->
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>my-app</title>
  <style>
    /* TODO: add your styles */
    body { font-family: sans-serif; padding: 1rem; margin: 0; }
  </style>
</head>
<body>
  <div id="root">
    <p>my-app UI</p>
    <button id="action-btn">Take Action</button>
  </div>

  <script type="module">
    // Using app-with-deps bundle to avoid peer-dependency resolution issues with esm.sh.
    import { App, PostMessageTransport } from 'https://esm.sh/@modelcontextprotocol/ext-apps@1.6.0/app-with-deps'

    const app = new App({ name: 'my-app', version: '1.0.0' }, {})

    app.onteardown = async () => ({})
    app.onerror = (err) => console.error('[mcp-app]', err)

    document.getElementById('action-btn').addEventListener('click', async () => {
      // Call a server-side tool. The host relays the call via AppBridge and updates the conversation.
      await app.callServerTool({ name: 'my_app_tool', arguments: { input: 'action triggered' } })
    })

    // Connect to the host via PostMessageTransport.
    // window.parent is either the sandbox proxy (standard hosts) or the host page directly (demo).
    await app.connect(new PostMessageTransport(window.parent, window.parent))
  </script>
</body>
</html>
"
`;
